--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,10 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx4G
+
+minecraft_version=1.20.1
+fabric_version=0.86.1+1.20.1
+loader_version=0.14.22
+# Mod Properties
+mod_version=2.1.0
+maven_group=com.jesz
+archives_base_name=creatediselgenerators
+emi_version=1.0.19+1.20.1
