--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-d-build.1145+mc1.20.1")
+    modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-d-build.1155+mc1.20.1")
 
-    modImplementation ("dev.emi:emi-fabric:${project.emi_version}")
+    //modImplementation ("dev.emi:emi-fabric:${project.emi_version}")
 }
 
 processResources {
