--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ repositories {
         name "tterrag maven"
         url "https://maven.tterrag.com/"
     }
+    maven {
+        // location of the maven that hosts JEI files since January 2023
+        name = "Jared's maven"
+        url = "https://maven.blamejared.com/"
+    }
 }
 
 dependencies {
@@ -51,6 +56,11 @@ dependencies {
     modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-d-build.1155+mc1.20.1")
 
     //modImplementation ("dev.emi:emi-fabric:${project.emi_version}")
+
+    modCompileOnlyApi("mezz.jei:jei-1.20.1-common-api:${jei_version}")
+    modCompileOnlyApi("mezz.jei:jei-1.20.1-fabric-api:${jei_version}")
+    // at runtime, use the full JEI jar for Fabric
+    modRuntimeOnly("mezz.jei:jei-1.20.1-fabric:${jei_version}")
 }
 
 processResources {
