--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'fabric-loom' version '1.5-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -47,6 +47,7 @@ repositories {
     }
     maven { url = "https://mvn.devos.one/snapshots/" }
     maven { url = "https://mvn.devos.one/releases/" }
+    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // Forge Config API Port
 }
 
 dependencies {
@@ -55,18 +56,25 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-d-build.1155+mc1.20.1")
+    modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-f-build.1335+mc1.20.1")
 
     //modImplementation ("dev.emi:emi-fabric:${project.emi_version}")
 
-    modImplementation(("io.github.fabricators_of_create.Porting-Lib:Porting-Lib:2.1.1127+1.20"))
+    //modImplementation(("io.github.fabricators_of_create.Porting-Lib:Porting-Lib:2.3.0+1.20.1"))
     //implementation "io.github.fabricators_of_create.Porting-Lib:Porting-Lib:2.1.1242+1.20.1"
+    for (String module in port_lib_modules.split(",")) {
+        modApi(("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version"))
+    }
+    modImplementation("fuzs.forgeconfigapiport:forgeconfigapiport-fabric:$forge_config_api_port_version")
 
-
-    modCompileOnlyApi("mezz.jei:jei-1.20.1-common-api:${jei_version}")
-    modCompileOnlyApi("mezz.jei:jei-1.20.1-fabric-api:${jei_version}")
+    //modApi("mezz.jei:jei-1.20.1-common-api:${jei_version}")
+    //modApi("mezz.jei:jei-1.20.1-fabric-api:${jei_version}")
+    modImplementation ("curse.maven:jei-238222:5101365")
     // at runtime, use the full JEI jar for Fabric
     modRuntimeOnly("mezz.jei:jei-1.20.1-fabric:${jei_version}")
+
+    //compileOnly ("cc.tweaked:cc-tweaked-1.20.1-fabric-api:1.105.0")
+    //runtimeOnly ("cc.tweaked:cc-tweaked-1.20.1-fabric:1.105.0")
 }
 
 processResources {
