--- a/src/main/resources/data/createdieselgenerators/recipes/basin_fermenting/golden_apple.json
+++ b/src/main/resources/data/createdieselgenerators/recipes/basin_fermenting/golden_apple.json
@@ -5,19 +5,19 @@
       "item": "minecraft:apple"
     },
     {
-      "tag": "forge:ingots/gold"
+      "item": "minecraft:gold_ingot"
     },
     {
-      "tag": "forge:ingots/gold"
+      "item": "minecraft:gold_ingot"
     },
     {
-      "tag": "forge:ingots/gold"
+      "item": "minecraft:gold_ingot"
     },
     {
-      "tag": "forge:ingots/gold"
+      "item": "minecraft:gold_ingot"
     },
     {
-      "tag": "forge:ingots/gold"
+      "item": "minecraft:gold_ingot"
     },
     {
       "fluid": "create:potion",
