--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,6 @@ repositories {
         name = "Modrinth"
         url = "https://api.modrinth.com/maven"
     }
-    maven { url = "https://jitpack.io/" }
-    maven {
-        name "devOSSnapshots"
-        url "https://mvn.devos.one/snapshots"
-    }
     maven {
         url 'https://www.cursemaven.com'
         content {
@@ -48,6 +43,8 @@ repositories {
     maven { url = "https://mvn.devos.one/snapshots/" }
     maven { url = "https://mvn.devos.one/releases/" }
     maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // Forge Config API Port
+
+    maven { url = "https://jitpack.io/" }
 }
 
 dependencies {
@@ -56,11 +53,17 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-f-build.1335+mc1.20.1")
+    modImplementation("com.simibubi.create:create-fabric-1.20.1:0.5.1-f-build.1417+mc1.20.1")
+    //modImplementation("maven.modrinth:create-fabric:0.5.1-f-build.1417+mc1.20.1")
+    /*
+    modApi(("com.tterrag.registrate_fabric:Registrate:$registrate_version")) {
+        exclude(group: "io.github.fabricators_of_create") // avoid duplicate Porting Lib
+    }
 
+     */
     //modImplementation ("dev.emi:emi-fabric:${project.emi_version}")
 
-    //modImplementation(("io.github.fabricators_of_create.Porting-Lib:Porting-Lib:2.3.0+1.20.1"))
+    //modImplementation(("maven.modrinth:porting_lib:2.3.4+1.20.1"))
     //implementation "io.github.fabricators_of_create.Porting-Lib:Porting-Lib:2.1.1242+1.20.1"
     for (String module in port_lib_modules.split(",")) {
         modApi(("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version"))
