--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,13 @@ minecraft_version=1.20.1
 fabric_version=0.92.0+1.20.1
 loader_version=0.15.7
 # Mod Properties
-mod_version=1.2.3h
+mod_version=2.1.4
 maven_group=com.jesz
 archives_base_name=creatediselgenerators
 emi_version=1.0.19+1.20.1
 jei_version=15.2.0.27
 
-port_lib_modules = accessors,base,entity,extensions,networking,obj_loader,tags,transfer,models,tool_actions,client_events,brewing
-port_lib_version = 2.3.0+1.20.1
+port_lib_modules = accessors,base,entity,extensions,networking,obj_loader,tags,transfer,models,tool_actions,client_events,brewing,config
+port_lib_version = 2.3.4+1.20.1
 forge_config_api_port_version = 8.0.0
+registrate_version = 1.3.62-MC1.20.1
